<resources>
    <string name="app_name">Practica</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="user">User</string>
    <string name="login">L O G I N</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cpassword">Repeat Password</string>
    <string name="upload_image">Upload image</string>
    <string name="next">N E X T</string>
    <string name="no_cuenta">You do not have an account?</string>
    <string name="registrate">Registrate</string>
    <string name="username">UserName</string>
    <string name="events">E V E N T S</string>
    <string name="new_event">N E W   E V E N T</string>
    <string name="mas">+</string>
    <string name="filter">Filter ></string>
    <string name="month">Month</string>
    <string name="day">17</string>
    <string name="title">Title</string>
    <string name="logout_question">Do you want to Logout?</string>
    <string name="log_out">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="perfil">Perfil</string>
    <string name="eventos_reados">Created Events</string>
    <string name="eventos_guardados">Registered Events</string>
    <string name="eventos_participados">Participated Events</string>
    <string name="crear_eventos">New event</string>
    <string name="chats">Chats</string>
    <string name="chats2">C H A T S</string>
    <string name="timeline">Timeline</string>
    <string name="contacto">Contact</string>
    <string name="descripcion">Description:</string>
    <string name="description">Description</string>
    <string name="ubication">Ubication</string>
    <string name="ubication2">Ubication:</string>
    <string name="creation_date">Creation Date</string>
    <string name="start_date">Start: dd/MM/yyyy + hh:mm</string>
    <string name="end_date">End: dd/MM/yyyy + hh:mm</string>
    <string name="max_people">Max people:</string>
    <string name="type">Type:</string>
    <string name="create">C R E A T E</string>
    <string name="search">Search</string>
    <string name="eventosCreados">Num events created</string>
    <string name="eventosParticipados">Num events participated</string>
    <string name="personasContactadas">Num persons contacted</string>
    <string name="save">S A V E</string>
    <string name="new_text">New Text</string>
    <string name="desapuntarse">Unregister</string>
    <string name="comentario_titulo">Make a commentary</string>
    <string name="puntuacion">Punctuation: </string>
    <string name="comentario">Commentary: </string>
    <string name="no_registrados">There is no registered future events!</string>

    <string-array name="filter_modes">
        <item>All Events</item>
        <item>Music</item>
        <item>Education</item>
        <item>Sport</item>
        <item>Games</item>
        <item>Travel</item>
        <item>Other</item>
    </string-array>

    <string-array name="filter_created">
        <item>Future</item>
        <item>Finished</item>
        <item>Current</item>
    </string-array>
</resources>