<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewEventActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/rectangulo_superior_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButtonNE"
                android:layout_width="46dp"
                android:layout_height="36dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="1dp"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/homeAsUpIndicator" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="730dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/rect_fondo"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/new_event" />

            <EditText
                android:id="@+id/nameNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/descriprtionNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/description" />

            <EditText
                android:id="@+id/ubicationNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/ubication" />

            <EditText
                android:id="@+id/creationDateNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/creation_date" />

            <EditText
                android:id="@+id/startDateNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/start_date" />

            <EditText
                android:id="@+id/endDateNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/end_date" />

            <EditText
                android:id="@+id/maxPeopleNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/max_people" />

            <EditText
                android:id="@+id/typeNE"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_campos"
                android:gravity="center"
                android:hint="@string/type" />

            <Button
                android:id="@+id/addImageNE"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/boton4"
                android:text="@string/upload_image"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/createNE"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/boton_claro"
                android:text="@string/create"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
