<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/boton1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:gravity="center"
                android:text="S I G N  U P"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/boton2"
                android:gravity="center"
                android:hint="@string/name"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/apellido"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:background="@drawable/boton2"
                android:gravity="center"
                android:hint="@string/lastname"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/boton2"
                android:gravity="center"
                android:hint="@string/email"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:background="@drawable/boton2"
                android:gravity="center"
                android:hint="@string/password"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/cpassword"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/boton2"
                android:gravity="center"
                android:hint="@string/cpassword"
                android:textSize="20dp" />

            <Button
                android:id="@+id/addImage"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/boton4"
                android:text="@string/upload_image"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/boton_claro"
                android:text="@string/next"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/userImageLoad"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="146dp"
            android:layout_marginRight="146dp"
            android:src="@drawable/barna"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
